# production-ready-CLI-tool

./: pyproject.toml
code-lens/: .gitignore  LICENSE  README.md  pyproject.toml
code-lens/src/code_lens/: __init__.py  ai_engine.py  cli.py
